--- a/register.html
+++ b/register.html
@@ -47,27 +47,27 @@
                         <div class="item-inner">
                             <div class="item-title label">Email Address</div>
                             <div class="item-input">
-                                <input type="email" autocomplete="off" required="" name="email" id="email" placeholder="Email Address"/>
+                                <input type="email" autocomplete="off" required="" name="email" id="reg_email" placeholder="Email Address"/>
                             </div>
                         </div>
                     </li>
 
-                    <li class="item-content">
-                        <div style="margin:0 auto; width:30%!important;text-align: center;">
-                            <img src="" id='img' style="width: 150px;">
-                        </div><br/>
+                    <!--<li class="item-content">-->
+                        <!--<div style="margin:0 auto; width:30%!important;text-align: center;">-->
+                            <!--<img src="" id='img' style="width: 150px;">-->
+                        <!--</div><br/>-->
 
-                        <div style="width:100%; text-align:center; padding:10px;">
-                            <button id='but_take'>Take photo</button>
-                            <button id='but_select'>Select photo from Gallery</button>
-                        </div>
-                    </li>
+                        <!--<div style="width:100%; text-align:center; padding:10px;">-->
+                            <!--<button id='but_take'>Take photo</button>-->
+                            <!--<button id='but_select'>Select photo from Gallery</button>-->
+                        <!--</div>-->
+                    <!--</li>-->
 
                     <li class="item-content">
                         <div class="item-inner">
                             <div class="item-title label">Password</div>
                             <div class="item-input">
-                                <input type="password" autocomplete="off" required="" name="reg_password" id="reg_password" placeholder="Matric No"/>
+                                <input type="password" autocomplete="off" required="" name="reg_password" id="reg_password" placeholder="Password"/>
                             </div>
                         </div>
                     </li>
