--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="css/material-icon.css"/>
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+      <link rel="stylesheet" type="text/css" href="lib/uploads/css/style.css">
   </head>
   <body class="theme-lightblue">
     <!-- Status bar overlay for fullscreen mode-->
@@ -117,16 +118,19 @@
     </div>
     <!--jquery-->
 
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="cordova_plugins.js"></script>
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="js/framework7.min.js"></script>
+
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
 
+
+    <script type="text/javascript" src="cordova.js" ></script>
 
 
   </body>
