--- a/main.html
+++ b/main.html
@@ -118,8 +118,8 @@
     </div>
     <!--jquery-->
 
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="cordova_plugins.js"></script>
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Path to Framework7 Library JS-->
