--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
         <div class="pages navbar-fixed">
           <!-- Page, data-page contains page name-->
 
-            <div class="page" data-page="main-page">
+            <div class="page" data-page="main-page-2">
 
 
                   <!--splash sceen-->
@@ -118,8 +118,7 @@
     </div>
     <!--jquery-->
 
-    <!--<script type="text/javascript" src="cordova.js"></script>-->
-    <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
+
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Path to Framework7 Library JS-->
@@ -130,7 +129,10 @@
     <script type="text/javascript" src="js/my-app.js"></script>
 
 
-    <!--<script type="text/javascript" src="cordova.js" ></script>-->
+    <script type="text/javascript" src="cordova.js" ></script>
+
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
 
 
   </body>
