--- a/image.html
+++ b/image.html
@@ -1,4 +1,4 @@
-<div data-page="passports" class="page">
+<div data-page="passport" class="page">
     <div class="panel-overlay"></div>
     <!-- Left panel with reveal effect-->
     <div class="navbar navbar-fixed">
