--- a/home.html
+++ b/home.html
@@ -50,6 +50,12 @@
                     <a href="image.html">Update Passport</a>
                 </div>
             </div>
+
+            <div class="content-block">
+                <div class="content-block-inner">
+                    <a href="category.html" class="button button-fill button-raised">Choose Quiz Category</a>
+                </div>
+            </div>
         </div>
         <p class="center">
             <strong>&copy; Computer Engr. Dept. Fed; Poly Ede.</strong>
