--- a/password.html
+++ b/password.html
@@ -1,11 +1,11 @@
-<div data-page="login-screen-embedded" class="page">
+<div data-page="password" class="page">
     <div class="page-content login-screen-content"  style="padding-top: 10px;">
         <div class="login-screen-title" style="padding: 10px;">Mobile Quiz</div>
 
         <div class="content-block">
             <p style="text-align:center; font-weight:bold;">Reset your password</p>
 
-            <form action="" method="post" role="form" id="password-form">
+            <form action="" method="post" role="form" id="password-forms">
                 <div class="list-block inputs-list">
                     <ul>
                         <li class="item-content">
@@ -42,7 +42,7 @@
 
 
                 <div class="content-block">
-                    <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Rahmon T.A</span></div>
+                    <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
                 </div>
             </form>
         </div>
