--- a/register.html
+++ b/register.html
@@ -88,7 +88,7 @@
 
 
             <div class="content-block">
-                <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Rahmon T.A</span></div>
+                <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
             </div>
         </form>
     </div>
