--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/my-app.css">
       <link rel="stylesheet" type="text/css" href="lib/uploads/css/style.css">
   </head>
-  <body class="theme-lightblue">
+  <body class="theme-red">
     <!-- Status bar overlay for fullscreen mode-->
     <div class="statusbar-overlay"></div>
     <!-- Panels overlay-->
@@ -38,20 +38,20 @@
 
 
                   <!--splash sceen-->
-                  <div class="page-content splash-screen center" style="color: deepskyblue;" id="splash-page">
+                  <div class="page-content splash-screen center" style="color: #FE0000; padding-top:0px;" id="splash-page">
                         <h3 style="margin-bottom:10px;">The Federal Polyechnic Ede</h3>
-                        <h4 style="margin-bottom:30px;">Compute Engineering Department</h4>
+                      <img src="img/ede-logo.png" class="img-responsive2" alt="">
+                        <h4 style="margin-bottom:10px;">Compute Engineering Department</h4>
+                      <img src="img/logo.jpg" alt="" class="img-responsive2">
 
-
-
-                      <h1 style="font-weight: bold; margin-top: 75px; margin-bottom:75px;">Mobile Quiz</h1>
+                      <h1 style="font-weight: bold; margin-bottom:10px;">Mobile Quiz</h1>
 
                       <p>
                           Supervised By:
                       </p>
 
-                      <h3>
-                         Mr. Rahmon T.A
+                      <h3 class="supervisor">
+                         Mr. Ramoni T.A
                       </h3>
                   </div>
                   <!--splash scree-->
@@ -100,7 +100,7 @@
 
                         <a href="home.html" class="hide" id="home">Home</a>
                         <div class="content-block">
-                            <div class="list-block-label"><b>Supervised By:</b><br>Mr. Rahmon T.A</div>
+                            <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
                         </div>
                     </form>
                 </div>
@@ -129,7 +129,7 @@
     <script type="text/javascript" src="js/my-app.js"></script>
 
 
-    <script type="text/javascript" src="cordova.js" ></script>
+    <!--<script type="text/javascript" src="cordova.js" ></script>-->
 
     <!--<script type="text/javascript" src="cordova.js"></script>-->
     <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
