--- a/image.html
+++ b/image.html
@@ -27,6 +27,8 @@
                         <p>
                             <button id='but_select' type="button" class="button">Select photo from Gallery</button>
                         </p>
+
+                        <input type="file" accept="image/*">
                     </div>
                 </div>
                 <div class="card-footer">
