--- a/image.html
+++ b/image.html
@@ -28,7 +28,13 @@
                             <button id='but_select' type="button" class="button">Select photo from Gallery</button>
                         </p>
 
-                        <input type="file" accept="image/*">
+                        <p>
+                            <button onclick="getImage()">Upload a Photo</button>
+                        </p>
+
+                        <p>
+                            <input type="file" accept="image/*">
+                        </p>
                     </div>
                 </div>
                 <div class="card-footer">
