--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
       <link rel="stylesheet" type="text/css" href="lib/uploads/css/style.css">
+
   </head>
   <body class="theme-red">
     <!-- Status bar overlay for fullscreen mode-->
@@ -129,7 +130,37 @@
     <script type="text/javascript" src="js/my-app.js"></script>
 
 
-    <!--<script type="text/javascript" src="cordova.js" ></script>-->
+    <script type="text/javascript" src="cordova.js" ></script>
+
+    <script type="text/javascript">
+        function getImage() {
+            navigator.camera.getPicture(uploadPhoto, function(message) {
+                alert('get picture failed');
+            }, {
+                quality: 100,
+                destinationType: navigator.camera.DestinationType.FILE_URI,
+                sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
+            });
+        }
+        function uploadPhoto(imageURI) {
+            var options = new FileUploadOptions();
+            options.fileKey = "file";
+            options.fileName = imageURI.substr(imageURI.lastIndexOf('/') + 1);
+            options.mimeType = "image/jpeg";
+            console.log(options.fileName);
+            var params = new Object();
+            params.value1 = "test";
+            params.value2 = "param";
+            options.params = params;
+            options.chunkedMode = false;
+            var ft = new FileTransfer();
+            ft.upload(imageURI, "http://app.onlinemedia.com.ng/quiz/upload.php", function(result){
+                console.log(JSON.stringify(result));
+            }, function(error){
+                console.log(JSON.stringify(error));
+            }, options);
+        }
+    </script>
 
     <!--<script type="text/javascript" src="cordova.js"></script>-->
     <!--<script type="text/javascript" src="cordova_plugins.js"></script>-->
