--- a/image.html
+++ b/image.html
@@ -21,20 +21,8 @@
                         <div class="logo-img">
                             <img src="" id='passport' style="max-width: 150px;">
                         </div>
-                        <p>
-                            <button id='but_take' type="button" class="button">Take photo</button>
-                        </p>
-                        <p>
-                            <button id='but_select' type="button" class="button">Select photo from Gallery</button>
-                        </p>
 
-                        <p>
-                            <button onclick="getImage()">Upload a Photo</button>
-                        </p>
-
-                        <p>
-                            <input type="file" accept="image/*">
-                        </p>
+                        <div id="upload-form"></div>
                     </div>
                 </div>
                 <div class="card-footer">
