--- a/main.html
+++ b/main.html
@@ -40,9 +40,9 @@
 
                   <!--splash sceen-->
                   <div class="page-content splash-screen center" style="color: #FE0000; padding-top:0px;" id="splash-page">
-                        <h3 style="margin-bottom:10px;">The Federal Polyechnic Ede</h3>
+                        <h3 style="margin-bottom:8px;">The Federal Polyechnic Ede</h3>
                       <img src="img/ede-logo.png" class="img-responsive2" alt="">
-                        <h4 style="margin-bottom:10px;">Compute Engineering Department</h4>
+                        <h4 style="margin-bottom:8px;">Compute Engineering Department</h4>
                       <img src="img/logo.jpg" alt="" class="img-responsive2">
 
                       <h1 style="font-weight: bold; margin-bottom:10px;">Mobile Quiz</h1>
@@ -54,6 +54,8 @@
                       <h3 class="supervisor">
                          Mr. Ramoni T.A
                       </h3>
+
+                      <a href="#" class="button button-raised button-fill btn-continue">Click Here to Continue</a>
                   </div>
                   <!--splash scree-->
 
