--- a/re-quiz.html
+++ b/re-quiz.html
@@ -1,12 +1,12 @@
-<div data-page="quiz" class="page">
+<div data-page="quiz_page" class="page">
     <div class="panel-overlay"></div>
     <!-- Left panel with reveal effect-->
     <div class="navbar navbar-fixed">
         <div class="navbar-inner">
             <div class="left">
                 &nbsp;<a href="#" class="back link back-link">
-                    <i class="icon icon-back"></i><span></span>
-                </a>
+                <i class="icon icon-back"></i><span></span>
+            </a>
             </div>
             <div class="center"><span id="quiz_name"></span> Quiz</div>
             <!--<div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>-->
@@ -32,8 +32,8 @@
 
         <div class="quiz-page">
             <div class="content-block">
-                <form action="" id="quiz-form">
-                    <div id="the-quiz"></div>
+                <form action="" id="quiz-form-2">
+                    <div id="the-quiz-2"></div>
 
                     <div class="content-block-inner submit-btn hide">
                         <div class="sub-btn">
@@ -78,10 +78,10 @@
                 <div class="content-block-title">&nbsp;</div>
                 <div class="content-block-inner">
                     <p>
-                        <a href="re-quiz.html" class="button button-raised btn-quiz-r">Restart Quiz</a>
+                        <a href="quiz.html" class="button button-raised btn-quiz-r">Restart Quiz</a>
                     </p>
                     <p>
-                        <a href="re-category.html" class="button button-raised">Quiz Category</a>
+                        <a href="category.html" class="button button-raised">Quiz Category</a>
                     </p>
                     <p>
                         <a href="#" id="logout" class="button button-raised">Logout</a>
