--- a/category.html
+++ b/category.html
@@ -4,11 +4,11 @@
     <div class="navbar navbar-fixed">
         <div class="navbar-inner">
             <div class="left">
-                &nbsp;<a href="#" class="back link back-link">
-                    <i class="icon icon-back"></i><span></span>
-                </a>
+                <!--&nbsp;<a href="#" class="back link back-link">-->
+                    <!--Home-->
+                <!--</a>-->
             </div>
-            <div class="center">Choose Quiz Categoy</div>
+            <div class="center">Select Categoy</div>
             <!--<div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>-->
         </div>
     </div>
@@ -29,6 +29,11 @@
 
                 </ul>
             </div>
+        </div>
+
+
+        <div class="content-block">
+            <a href="home.html" class="button button-raised">Update Profile</a>
         </div>
 
     </div>
