--- a/password.html
+++ b/password.html
@@ -35,7 +35,7 @@
 
                 <div class="content-block">
                     <p>
-                        <a href="#" class="button back link back-link">Back</a>
+                        <a href="#" class="button back link back-link">Home</a>
                     </p>
                 </div>
 
