--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
       <link rel="stylesheet" href="css/material-icon.css"/>
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
-      <link rel="stylesheet" type="text/css" href="lib/uploads/css/style.css">
+      <link rel="stylesheet" href="lib/toast/css/iziToast.min.css">
 
   </head>
   <body class="theme-red">
@@ -41,9 +41,9 @@
                   <!--splash sceen-->
                   <div class="page-content splash-screen center" style="color: #FE0000; padding-top:0px;" id="splash-page">
                         <h3 style="margin-bottom:8px;">The Federal Polyechnic Ede</h3>
-                      <img src="img/ede-logo.png" class="img-responsive2" alt="">
+                      <img src="img/ede-logo.png" class="img-responsive2" alt="" width="100px">
                         <h4 style="margin-bottom:8px;">Compute Engineering Department</h4>
-                      <img src="img/logo.jpg" alt="" class="img-responsive2">
+                      <img src="img/logo.jpg" alt="" class="img-responsive2" width="100px">
 
                       <h1 style="font-weight: bold; margin-bottom:10px;">Mobile Quiz</h1>
 
@@ -99,9 +99,11 @@
                             <a href="register.html" class="button">Create Account</a>
 
                             <a href="password.html" class="button">Forgot Password</a>
+
+                            <a href="about.html" class="button">About</a>
                         </div>
 
-                        <a href="home.html" class="hide" id="home">Home</a>
+                        <a href="category.html" class="hide" id="home">Home</a>
                         <div class="content-block">
                             <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
                         </div>
@@ -128,6 +130,7 @@
     <script type="text/javascript" src="js/framework7.min.js"></script>
 
     <!-- Path to your app js-->
+    <script type="text/javascript" src="lib/toast/js/iziToast.min.js"></script>
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
     <link rel="stylesheet" href="lib/juploads/JQuery.JSAjaxFileUploader.css">
