--- a/quiz.html
+++ b/quiz.html
@@ -3,11 +3,6 @@
     <!-- Left panel with reveal effect-->
     <div class="navbar navbar-fixed">
         <div class="navbar-inner">
-            <div class="left">
-                &nbsp;<a href="#" class="back link back-link">
-                    <i class="icon icon-back"></i><span></span>
-                </a>
-            </div>
             <div class="center"><span id="quiz_name"></span> Quiz</div>
             <!--<div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>-->
         </div>
@@ -78,13 +73,16 @@
                 <div class="content-block-title">&nbsp;</div>
                 <div class="content-block-inner">
                     <p>
-                        <a href="re-quiz.html" class="button button-raised btn-quiz-r">Restart Quiz</a>
+                        <a href="re-quiz.html" class="button button-raised">Restart Quiz</a>
                     </p>
                     <p>
                         <a href="re-category.html" class="button button-raised">Quiz Category</a>
                     </p>
                     <p>
                         <a href="#" id="logout" class="button button-raised">Logout</a>
+                    </p>
+                    <p>
+                        <a href="home.html" class="button button-raised">Home</a>
                     </p>
                 </div>
             </div>
