--- a/re-category.html
+++ b/re-category.html
@@ -4,8 +4,8 @@
     <div class="navbar navbar-fixed">
         <div class="navbar-inner">
             <div class="left">
-                &nbsp;<a href="#" class="back link back-link">
-                    <i class="icon icon-back"></i><span></span>
+                <a href="index.html" class="back link icon-only">
+                    <i class="icon icon-back"></i>
                 </a>
             </div>
             <div class="center">Choose Quiz Categoy</div>
