--- a/re-quiz.html
+++ b/re-quiz.html
@@ -4,9 +4,9 @@
     <div class="navbar navbar-fixed">
         <div class="navbar-inner">
             <div class="left">
-                &nbsp;<a href="#" class="back link back-link">
-                <i class="icon icon-back"></i><span></span>
-            </a>
+                <a href="home.html">
+                    <i class="icon icon-back"></i>
+                </a>
             </div>
             <div class="center"><span id="quiz_name"></span> Quiz</div>
             <!--<div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>-->
@@ -14,15 +14,15 @@
     </div>
     <div class="page-content">
 
-        <div class="time-section hide">
+        <div class="t-time-section hide">
             <h3>&nbsp;</h3>
             <div class="card">
                 <div class="card-header">Time Remaining</div>
                 <div class="card-content">
                     <div class="card-content-inner">
-                        <span id="time_rem_hour">00</span> <span> : </span>
-                        <span id="time_rem_minute">00</span> <span> : </span>
-                        <span id="time_rem_seconds">00</span>
+                        <span id="t-time_rem_hour">00</span> <span> : </span>
+                        <span id="t-time_rem_minute">00</span> <span> : </span>
+                        <span id="t-time_rem_seconds">00</span>
                     </div>
                 </div>
                 <div class="card-footer">&nbsp;</div>
@@ -78,13 +78,16 @@
                 <div class="content-block-title">&nbsp;</div>
                 <div class="content-block-inner">
                     <p>
-                        <a href="quiz.html" class="button button-raised btn-quiz-r">Restart Quiz</a>
+                        <a href="quiz.html" class="button button-raised">Restart Quiz</a>
                     </p>
                     <p>
                         <a href="category.html" class="button button-raised">Quiz Category</a>
                     </p>
                     <p>
                         <a href="#" id="logout" class="button button-raised">Logout</a>
+                    </p>
+                    <p>
+                        <a href="home.html" class="button button-raised">Home</a>
                     </p>
                 </div>
             </div>
