--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <p class="center">
-                <strong>Supervised By Alhaji K.A Kawonise</strong>
+                <strong>Supervised By Mr. Ramoni T.A.</strong>
             </p>
         </div>
     </div>
