--- a/about.html
+++ b/about.html
@@ -61,8 +61,18 @@
                     <p>07065314620</p>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-header">Mr. Ramoni T.A</div>
+                    <div class="card-content-inner">
+                        <img src="img/d.jpg" alt="" class="img-responsive">
+                    </div>
+                </div>
+                <div class="card-footer">Project Supervisor</div>
+            </div>
             <p class="center">
-                <strong>Supervised By Mr. Ramoni T.A.</strong>
+                <strong class="supervisor">Supervised By Mr. Ramoni T.A.</strong>
             </p>
         </div>
     </div>
