--- a/re-quiz.html
+++ b/re-quiz.html
@@ -8,7 +8,7 @@
                     <i class="icon icon-back"></i>
                 </a>
             </div>
-            <div class="center"><span id="quiz_name"></span> Quiz</div>
+            <div class="center"><span id="quiz_name_2"></span> Quiz</div>
             <!--<div class="right"><a href="#" class="open-panel link icon-only"><i class="icon icon-bars"></i></a></div>-->
         </div>
     </div>
@@ -30,7 +30,7 @@
         </div>
 
 
-        <div class="quiz-page">
+        <div class="t_quiz-page">
             <div class="content-block">
                 <form action="" id="quiz-form-2">
                     <div id="the-quiz-2"></div>
@@ -52,24 +52,24 @@
                 <div class="content-block-title center">Quiz Summary</div>
                 <div class="content-block-inner">
                     <p>
-                        Total Number of Questions : <strong class="right"><span id="total_q"></span></strong>
+                        Total Number of Questions : <strong class="right"><span id="t_total_q"></span></strong>
                     </p>
                     <p>
-                        Total Answered :  <strong class="right"><span id="total_a"></span></strong>
+                        Total Answered :  <strong class="right"><span id="t_total_a"></span></strong>
                     </p>
                     <p>
-                        Total Unanswered :  <strong class="right"><span id="total_u"></span></strong>
-                    </p>
-
-                    <p>
-                        Total Score :  <strong class="right"><span class="scores"></span> <span id="perc"></span></strong>
+                        Total Unanswered :  <strong class="right"><span id="t_total_u"></span></strong>
                     </p>
 
                     <p>
-                        Wrong Answer: <strong class="right"><span id="wrong"></span></strong>
+                        Total Score :  <strong class="right"><span class="t_scores"></span> <span id="t_perc"></span></strong>
+                    </p>
+
+                    <p>
+                        Wrong Answer: <strong class="right"><span id="t_wrong"></span></strong>
                     </p>
                     <p>
-                        Remark :  <strong class="right" ><span id="rem"></span></strong>
+                        Remark :  <strong class="right" ><span id="t_rem"></span></strong>
                     </p>
                 </div>
             </div>
