--- a/about.html
+++ b/about.html
@@ -66,7 +66,9 @@
                 <div class="card-content">
                     <div class="card-header">Mr. Ramoni T.A</div>
                     <div class="card-content-inner">
-                        <img src="img/d.jpg" alt="" class="img-responsive">
+                        <div align="center">
+                            <img src="img/d.jpg" alt="" class="img-responsive">
+                        </div>
                     </div>
                 </div>
                 <div class="card-footer">Project Supervisor</div>
