--- a/re-quiz.html
+++ b/re-quiz.html
@@ -14,7 +14,7 @@
     </div>
     <div class="page-content">
 
-        <div class="t-time-section hide">
+        <div class="t_time-section hide">
             <h3>&nbsp;</h3>
             <div class="card">
                 <div class="card-header">Time Remaining</div>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="result-form hide">
+        <div class="t_result-form hide">
             <div class="content-block">
                 <div class="content-block-title center">Quiz Summary</div>
                 <div class="content-block-inner">
