--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="card-footer">
                     <a href="profile.html">Update Profile</a>
-                    <a href="image.html">Update Passport</a>
+                    <a href="image.html" class="hide">Update Passport</a>
                 </div>
             </div>
 
