--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@
                             <input type="hidden" name="user_id" id="the_user_id">
                             <input type="hidden" name="cat_id" id="the_cat_id">
                             <input type="hidden" name="end_quiz" value="yes">
-                            <input type="submit" name="end-quiz" class="button button-raised button-fill sub-test" value="Submit">
+                            <input type="submit" class="button button-raised button-fill sub-test" value="Submit">
                         </div>
                     </div>
                 </form>
