--- a/re-quiz.html
+++ b/re-quiz.html
@@ -14,7 +14,7 @@
     </div>
     <div class="page-content">
 
-        <div class="t_time-section hide">
+        <div class="t-time-section hide">
             <h3>&nbsp;</h3>
             <div class="card">
                 <div class="card-header">Time Remaining</div>
@@ -35,12 +35,12 @@
                 <form action="" id="quiz-form-2">
                     <div id="the-quiz-2"></div>
 
-                    <div class="content-block-inner submit-btn hide">
+                    <div class="content-block-inner submit-btn-2 hide">
                         <div class="sub-btn">
                             <input type="hidden" name="user_id" id="the_user_id">
                             <input type="hidden" name="cat_id" id="the_cat_id">
                             <input type="hidden" name="end_quiz" value="yes">
-                            <input type="submit" name="end-quiz" class="button button-raised button-fill sub-test" value="Submit">
+                            <input type="submit" class="button button-raised button-fill sub-test-2" value="Submit">
                         </div>
                     </div>
                 </form>
@@ -78,7 +78,7 @@
                 <div class="content-block-title">&nbsp;</div>
                 <div class="content-block-inner">
                     <p>
-                        <a href="quiz.html" class="button button-raised">Restart Quiz</a>
+                        <a href="re-quiz.html" class="button button-raised">Restart Quiz</a>
                     </p>
                     <p>
                         <a href="category.html" class="button button-raised">Quiz Category</a>
