--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
     <div class="page-content">
         <div class="content-block">
             <h3 align="center">
-                Development of Mobile Quiz Develop by
+                <!-- Development of Mobile Quiz Develop by -->
             </h3>
 
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-content">
                     <div class="card-header">Adegboega Ayodeji M.</div>
                     <div class="card-content-inner">
@@ -64,7 +64,7 @@
 
             <div class="card">
                 <div class="card-content">
-                    <div class="card-header">Mr. Ramoni T.A</div>
+                    <div class="card-header">Mr. Amusan D.G</div>
                     <div class="card-content-inner">
                         <div align="center">
                             <img src="img/d.jpg" alt="" class="img-responsive">
@@ -72,9 +72,9 @@
                     </div>
                 </div>
                 <div class="card-footer">Project Supervisor</div>
-            </div>
+            </div> -->
             <p class="center">
-                <strong class="supervisor">Supervised By Mr. Ramoni T.A.</strong>
+                <strong class="supervisor">Supervised By Mr. Amusan D.G.</strong>
             </p>
         </div>
     </div>
