--- a/password.html
+++ b/password.html
@@ -42,7 +42,7 @@
 
 
                 <div class="content-block">
-                    <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
+                    <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Amusan D.G</span></div>
                 </div>
             </form>
         </div>
