--- a/home.html
+++ b/home.html
@@ -57,9 +57,9 @@
                 </div>
             </div>
         </div>
-        <p class="center">
+        <!-- <p class="center">
             <strong>&copy; Computer Engr. Dept. Fed; Poly Ede.</strong>
-        </p>
+        </p> -->
     </div>
 </div>
 </div>
