--- a/about.html
+++ b/about.html
@@ -12,69 +12,28 @@
         </div>
     </div>
     <div class="page-content">
-        <div class="content-block">
-            <h3 align="center">
-                Development of Mobile Quiz Develop by
-            </h3>
+        <div class="content-block center">
+            <img src="img/fpe.png" alt="" class="img-responsive2" width="100px">
 
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-header">Adegboega Ayodeji M.</div>
-                    <div class="card-content-inner">
-                        <div align="center">
-                            <img src="img/a.jpg" alt="" class="img-responsive2">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <p>CE201500486</p>
-                    <p>08161289620</p>
-                </div>
-            </div>
+                      <h1 style="font-weight: bold; margin-bottom:10px;">Mobile Quiz</h1>
 
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-header">Akinpelu Ismat A.</div>
-                    <div class="card-content-inner">
-                        <div align="center">
-                            <img src="img/b.jpg" alt="" class="img-responsive2">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <p>CE201501145</p>
-                    <p>09065625418</p>
-                </div>
-            </div>
+                      <p>
+                          Supervised By:
+                      </p>
 
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-header">Adeniran Taiwo H.</div>
-                    <div class="card-content-inner">
-                        <div align="center">
-                            <img src="img/c.jpg" alt="" class="img-responsive2">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <p>CE201500886</p>
-                    <p>07065314620</p>
-                </div>
-            </div>
+                      <h3 class="supervisor">
+                         Mrs. Fabiyi A.A
+                      </h3>
 
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-header">Mr. Ramoni T.A</div>
-                    <div class="card-content-inner">
-                        <div align="center">
-                            <img src="img/d.jpg" alt="" class="img-responsive">
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">Project Supervisor</div>
-            </div>
+                      <p>
+                        Designed By:
+                      </p>
+
+                      <h4>Adebayo Ramota Bukola - CS201600814DPT</h4>
+                      <h4>Adewale Tolulope Christiana - CS20163803DPT</h4>
+                      <h4>Elusiyan Ayobami Sanmi - CS201600252dpt</h4>
             <p class="center">
-                <strong class="supervisor">Supervised By Mr. Ramoni T.A.</strong>
+                <strong class="supervisor">Supervised By Mrs. Fabiyi A.A.</strong>
             </p>
         </div>
     </div>
