--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <link rel="stylesheet" href="lib/toast/css/iziToast.min.css">
 
   </head>
-  <body class="theme-red">
+  <body class="theme-blue">
     <!-- Status bar overlay for fullscreen mode-->
     <div class="statusbar-overlay"></div>
     <!-- Panels overlay-->
@@ -39,11 +39,10 @@
 
 
                   <!--splash sceen-->
-                  <div class="page-content splash-screen center" style="color: #FE0000; padding-top:0px;" id="splash-page">
-                        <h3 style="margin-bottom:8px;">The Federal Polyechnic Ede</h3>
-                      <img src="img/ede-logo.png" class="img-responsive2" alt="" width="100px">
-                        <h4 style="margin-bottom:8px;">Compute Engineering Department</h4>
-                      <img src="img/logo.jpg" alt="" class="img-responsive2" width="100px">
+                  <div class="page-content splash-screen center" style="color: #09c; padding-top:10px;" id="splash-page">
+                        <h3 style="margin-bottom:8px;">The Federal Polytechnic, Ede</h3>                      
+                        <h4 style="margin-bottom:8px;">Compute Science Department</h4>
+                      <img src="img/fpe.png" alt="" class="img-responsive2" width="100px">
 
                       <h1 style="font-weight: bold; margin-bottom:10px;">Mobile Quiz</h1>
 
@@ -52,10 +51,18 @@
                       </p>
 
                       <h3 class="supervisor">
-                         Mr. Ramoni T.A
+                         Mrs. Fabiyi A.A
                       </h3>
 
-                      <a href="#" class="button button-raised button-fill btn-continue">Click Here to Continue</a>
+                      <p>
+                        Designed By:
+                      </p>
+
+                      <h4>Adebayo Ramota Bukola - CS201600814DPT</h4>
+                      <h4>Adewale Tolulope Christiana - CS20163803DPT</h4>
+                      <h4>Elusiyan Ayobami Sanmi - CS201600252dpt</h4>
+
+                      <div style="padding: 20px;"><a href="#" class="button button-raised button-fill btn-continue">Click Here to Continue</a></div>
                   </div>
                   <!--splash scree-->
 
@@ -105,7 +112,7 @@
 
                         <a href="category.html" class="hide" id="home">Home</a>
                         <div class="content-block">
-                            <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mr. Ramoni T.A</span></div>
+                            <div class="list-block-label"><b>Supervised By:</b><br><span class="supervisor">Mrs. Fabiyi A.A</span></div>
                         </div>
                     </form>
                 </div>
